--- a/ChatBluetooth/app/src/main/res/values/colors.xml
+++ b/ChatBluetooth/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorPrimary">#3D5AFE</color>
+    <color name="colorPrimaryDark">#3D5AFE</color>
     <color name="colorAccent">#03DAC5</color>
+
+    <color name="colorMittente">#00B0FF</color>
+    <color name="colorDestinatario">#00E5FF</color>
 </resources>
