--- a/ChatBluetooth/app/src/main/res/layout/activity_chat.xml
+++ b/ChatBluetooth/app/src/main/res/layout/activity_chat.xml
@@ -8,8 +8,10 @@
 
     <EditText
         android:id="@+id/etInserisciMessaggio"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:autofillHints=""
         android:ems="10"
@@ -17,7 +19,7 @@
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btnInviaMessaggio"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/btnCSend" />
 
     <Button
         android:id="@+id/btnInviaMessaggio"
@@ -41,4 +43,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
+
+    <Button
+        android:id="@+id/btnCSend"
+        android:layout_width="69dp"
+        android:layout_height="44dp"
+        android:layout_marginBottom="8dp"
+        android:text="CSend"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
