--- a/ChatBluetooth/app/src/main/res/values/colors.xml
+++ b/ChatBluetooth/app/src/main/res/values/colors.xml
@@ -5,5 +5,5 @@
     <color name="colorAccent">#03DAC5</color>
 
     <color name="colorMittente">#00B0FF</color>
-    <color name="colorDestinatario">#00E5FF</color>
+    <color name="colorDestinatario">#ADE5FF</color>
 </resources>
