--- a/ChatBluetooth/app/src/main/res/layout/activity_chat.xml
+++ b/ChatBluetooth/app/src/main/res/layout/activity_chat.xml
@@ -6,50 +6,55 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <EditText
-        android:id="@+id/etInserisciMessaggio"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:autofillHints=""
-        android:ems="10"
-        android:hint="@string/hint_message"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/btnInviaMessaggio"
-        app:layout_constraintStart_toEndOf="@+id/btnCSend" />
-
-    <Button
-        android:id="@+id/btnInviaMessaggio"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="8dp"
-        android:text="@string/btnSend"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvChat"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="24dp"
-        app:layout_constraintBottom_toTopOf="@+id/etInserisciMessaggio"
+        android:layout_margin="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
-    <Button
-        android:id="@+id/btnCSend"
-        android:layout_width="69dp"
-        android:layout_height="44dp"
-        android:layout_marginBottom="8dp"
-        android:text="CSend"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+    <RelativeLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_margin="8dp"
+        android:gravity="center_vertical"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <ImageView
+            android:id="@+id/ivModCriptata"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:contentDescription="Attiva_Disattiva AES"
+            app:srcCompat="@drawable/no_aes" />
+
+        <EditText
+            android:id="@+id/etInserisciMessaggio"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toStartOf="@+id/ivInviaMessaggio"
+            android:layout_toEndOf="@+id/ivModCriptata"
+            android:layout_marginHorizontal="8dp"
+            android:autofillHints=""
+            android:hint="@string/hint_message"
+            android:inputType="textPersonName"
+            android:paddingHorizontal="8dp" />
+
+        <ImageView
+            android:id="@+id/ivInviaMessaggio"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:contentDescription="Invia messaggio"
+            app:srcCompat="@drawable/invia" />
+    </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
