--- a/ChatBluetooth/app/src/main/res/layout/layout_chat.xml
+++ b/ChatBluetooth/app/src/main/res/layout/layout_chat.xml
@@ -23,15 +23,15 @@
 
             <TextView
                 android:id="@+id/tvMessaggio"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"/> />
+                android:textSize="20sp"/>
 
             <TextView
                 android:id="@+id/tvData"
                 android:textSize="12sp"
                 android:paddingTop="8dp"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
         </LinearLayout>
