--- a/ChatBluetooth/app/src/main/res/layout/activity_main.xml
+++ b/ChatBluetooth/app/src/main/res/layout/activity_main.xml
@@ -44,7 +44,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
-        android:text="Avvia ricerca"
+        android:text="@string/avvia_ricerca"
         android:layout_margin="8dp"
         android:textColor="@color/colorBianco"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -57,7 +57,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:text="Risultati ricerca:"
+        android:text="@string/risultati_ricerca"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnSearch" />
