--- a/ChatBluetooth/app/src/main/res/values/styles.xml
+++ b/ChatBluetooth/app/src/main/res/values/styles.xml
@@ -12,6 +12,7 @@
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowCloseOnTouchOutside">true</item>
         <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:layout_gravity">bottom</item>
     </style>
 
 </resources>
