--- a/ChatBluetooth/app/src/main/res/menu/menu_chatlist.xml
+++ b/ChatBluetooth/app/src/main/res/menu/menu_chatlist.xml
@@ -7,4 +7,8 @@
         android:icon="@android:drawable/ic_menu_delete"
         android:title="@string/menu_chatlist_delete"
         app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/delete_all"
+        android:title="@string/menu_delete_all"
+        app:showAsAction="never"/>
 </menu>
