--- a/ChatBluetooth/app/src/main/res/menu/menu_chat.xml
+++ b/ChatBluetooth/app/src/main/res/menu/menu_chat.xml
@@ -11,7 +11,7 @@
         />
     <item
         android:id="@+id/delete_menu"
-        android:icon="@drawable/ic_delete_cestino"
+        android:icon="@drawable/ic_cestino"
         android:title="delete"
         app:showAsAction="always" />
 </menu>
