--- a/ChatBluetooth/app/src/main/res/menu/menu_chatlist.xml
+++ b/ChatBluetooth/app/src/main/res/menu/menu_chatlist.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/delete_menu_chatlist"
-        android:icon="@drawable/ic_delete_cestino"
+        android:icon="@drawable/ic_cestino"
         android:title="@string/menu_chatlist_delete"
         app:showAsAction="ifRoom" />
     <item
