--- a/ChatBluetooth/app/src/main/res/layout/layout_chat_list.xml
+++ b/ChatBluetooth/app/src/main/res/layout/layout_chat_list.xml
@@ -11,7 +11,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        app:cardBackgroundColor="@color/colorBGSelected"
         app:cardCornerRadius="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,19 +21,22 @@
             android:id="@+id/llChatList"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:gravity="center_vertical"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/ivChat"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginHorizontal="8dp"
                 android:layout_margin="8dp"
-                app:srcCompat="@drawable/chat" />
+                app:srcCompat="@drawable/ic_chat" />
 
             <TextView
                 android:id="@+id/tvChat"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textAlignment="center"
                 android:textSize="20sp"
                 android:layout_margin="8dp"/>
 
