--- a/ChatBluetooth/app/src/main/res/layout/layout_main.xml
+++ b/ChatBluetooth/app/src/main/res/layout/layout_main.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        app:cardBackgroundColor="@color/colorBGSelected"
+        app:cardBackgroundColor="@color/colorMainCv"
         app:cardCornerRadius="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
