--- a/ChatBluetooth/app/src/main/res/layout/activity_pop.xml
+++ b/ChatBluetooth/app/src/main/res/layout/activity_pop.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    tools:context=".activities.PopUpActivity">
+    tools:context=".activities.EmoticonsActivity">
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvEmoji2"
         android:layout_width="match_parent"
