--- a/ChatBluetooth/app/src/main/res/menu/menu_main.xml
+++ b/ChatBluetooth/app/src/main/res/menu/menu_main.xml
@@ -4,5 +4,5 @@
     <item
         android:id="@+id/menu_about_us"
         android:icon="@android:drawable/ic_dialog_info"
-        android:title="About Us" />
+        android:title="@string/about_us" />
 </menu>
